--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   font: normal 100%/1.5 sans-serif;
-  background-color: #fff;
+  background-color: #f2f2f2;
   line-height: 1.5;
 }
 
@@ -9,7 +9,35 @@ html {
   box-sizing: inherit;
 }
 
+div {
+  display: inline-block;
+  width: 25%;
+  float: left;
+}
+
 img {
   width: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+h2 {
+  font-size: 1rem;
+}
+
+.Barrett {
+  background-color: #e2e2e2;
+}
+
+.Hedegaard {
+  background-color: #ccc;
+}
+
+.Cejkova {
+  background-color: #aaa;
+}
+
+.Olivarez {
+  #999;
 }
