--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ html {
   box-sizing: inherit;
 }
 
+h1 {
+text-align: center;
+font-size: 2rem;
+}
+
 div {
   display: inline-block;
   width: 25%;
@@ -35,6 +40,7 @@ p {
 .Barrett {
   background-color: #e2e2e2;
   border-left: 1px solid #333;
+
 
 }
 
