--- a/css/main.css
+++ b/css/main.css
@@ -10,15 +10,17 @@ html {
 }
 
 h1 {
-text-align: center;
-font-size: 2rem;
+  text-align: center;
+  font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
 }
 
 div {
   display: inline-block;
   width: 25%;
   float: left;
-padding-top: .5em;
+  padding-top: .5em;
+  font-family: 'Open Sans', sans-serif;
 }
 
 img {
