--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
 h1 {
   text-align: center;
   font-size: 2rem;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 div {
@@ -20,7 +20,7 @@ div {
   width: 25%;
   float: left;
   padding-top: .5em;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 img {
