--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ img {
 }
 
 h2 {
-  font-size: 1rem;
+  font-size: .875rem;
   margin: 0;
 }
 
@@ -84,5 +84,4 @@ background-color: #333;
 
 .btn:hover {
   background-color: #000;
-
 }
